--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
-body {
-  margin: 0;
+* {
+  box-sizing: border-box;
+}
+
+p {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  font-size: 20px;
+  padding-top: 12.5px;
+  padding-left: 17.5px;
 }
