--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
   box-sizing: border-box;
 }
 
-p {
-  width: 50px;
-  height: 50px;
+.box {
+  height: 100px;
+  width: 100px;
   border: 1px solid black;
-  font-size: 20px;
-  padding-top: 12.5px;
-  padding-left: 17.5px;
+  display: inline-block;
+  margin-right: 4px;
+  border-radius: 5px;
 }
